--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,42 +29,7 @@ header{
         width: 100%;
         height: 350px;
     }
-
-header nav ul{
-    background-color: #38006b;
-    padding: 15px;
-    margin: auto;
-    display: flex;
-    align-items:center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    justify-content: space-between;
-}
-ul{
-    margin-left: 300px;
-    list-style-type: none;
-}
-
-ul li{
-    display: inline-block;
-    align-items: center;
-}
-ul li a {
-    color: #ffd600;
-    text-decoration: none;
-    display: flex;
-    text-transform: uppercase;
-    justify-content: space-between;
     
-}
-body{
-    background: rgb(106,27,154);
-    background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-} 
-
 .principal {
     color: #F8CA00;
     font-family: Poetsen;
@@ -75,285 +40,9 @@ body{
 }
 .principal:hover{
     font-size: 105px;
-}
-.Other{
-    color: #F8CA00;
-    font-family: Poetsen;
-    display: flex;
-    justify-content:center;
-    text-align:center;
-    font-size: 15vh;
-    padding: 15vh 15vh 5vh 15vh;
-
-   
-}
-.TopP{color:#F8CA00;
-    text-align:right;
-    align-items:center; 
-    font-size: 7vh;   
-    padding-left: 25vh;
-    
-    
-}
-.Top{color:#F8CA00;
-    text-align:right;
-    align-items:center; 
-    font-size: 7vh;    
-}
-
-h2{color:#F8CA00;
-    margin: 25px 32px;
-    text-align:right;
-    align-items: center;       
-}
-
-h3{color: #F8CA00;
-}
-p{
-   color: white; 
-}
-a {
-    color: white;
-    background-color: indigo;
-}  
-footer {
-    color:#ffff52;
-    background-color:#38006b;
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-    padding: 2rem;
-}
-
-.tablita{
-    background-color: #F8CA00;
-}
-
-/*html Sección Intro */
-
-.IntroIndex {
-    background: rgb(106,27,154);
-background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%); 
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;    
-}
-
-/* .IntroIndex__Video {
-    margin: 20px;
-    padding: 20px;
-}
-
-.IntroIndex__Texto{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:space-evenly;
-    height: 55vh;
-    color: white;
-    background-color: #9c4dcc;
-    padding: 20px;
-    border-color: #ffd600;
-    border-radius: 1rem;
-    overflow:hidden;
-  
-} */
-/*html Sección Niñxs */
-
-/* .Niñxs {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    background: rgb(106,27,154);
-    background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-    
-}
-
-.Niñxs__Texto{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    height: 90%;
-}
-
-.Niñxs__Imagen{
-    margin: 20px
-}
-.Niñxs__Actividades{
-    display: flex;
-    flex-direction:column;
-    justify-content:space-evenly;
-    align-items:center;
-    height: 50vh;
-    margin:2rem;
-    padding: auto;
-  
-}
-.Niñxs__Actividades ul {
-    display: flex;
-    flex-direction: column;
-    justify-content:space-around;
-    margin:auto;
-    height:35vh;
-
-} */
-
-/*html Sección Cuidadores Primarios */
-/* .CuidadoresP {
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    padding: 50px;
-    background: rgb(106,27,154);
-background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-    
-    
-}
-.CuidadoresP__Imagen{
-    text-align: right;
-    justify-content: center;  
-}
-.CuidadoresP__Texto{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    text-align:left;
-    padding: 7vh 20vh 7vh 5vh;
-   
-}
-.CuidadoresAnidado {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 1em;
-    justify-content: center;
-    justify-self: center;
-}
-.CuidadoresPrimarios_anidado {
-    grid-column: 1/4;
-}
-
-
-
-/*html Sección Agentes Educativos */
-/* .AgentesE {
-    display: flex;
-    justify-content: center;
-    align-items:center;
-background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-}
-.AgentesE__Imagen{
-    text-align:left;
-    margin: 10px 100px 10px 10px;  
-    padding: 2vh; 
-}
-.AgentesE__Texto{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    text-align:left;
-    padding: 50px 50px 50px 450px;
-}
-
-.AgentesE__Boton{
-    display: flex;
-    padding: 50px 50px 50px 450px;
-} */
-
-/*Página Niños y Niñas*/
-#gradiente1{
-    background: rgb(106,27,154);
-    background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-}
-.IntroNN {
-    
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;
-}
-
-
-.IntroNN__Texto{
-    display: flex;
-    flex-direction:column;
-    justify-content:space-evenly;
-    padding: 50px;
-    padding-bottom: 60vh;
-    background-image: url(../img/Niño.jpg);
-    background-size: 150vh;
-    width: 100%;
-    height: 450px;
- }
-
-.ActividadesNN{
-
-display: flex;
-justify-content:space-between;
-align-items: center;
-padding: 50px;
-}
-
-/* .SliderNN {
-    width: 95%;
-    margin: auto;
-    overflow: hidden;   
-}
-.SliderNN ul {
-    display: flex;
-    width: 300%;
-    animation: cambio 15s infinite;
-    animation-direction: alternate;
-    
-}
-.SliderNN li {
- width: 60%;
-}
-.SliderNN img {
-    width: 60%;
-}
-@keyframes cambio {
-    0% {margin-left: 0;}
-    25% {margin-left: -100;}
-
-    50% {margin-left: -200%;}
-    100% {margin-left: -200%;}
-} */
-.ActividadesNN__3 {
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 50px;
-
-}
-
-.ScapeRoom__NN {
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 50px;
-}
-
+    transition: ease-in-out;
+    }
 /*Página Cuidadores Primarios*/
-
-#gradiente1{
-    background: rgb(106,27,154);
-    background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-}
-.IntroCp{
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;
-}
-
-
 .ActividadesCpG {
     display: grid;
     gap: 1em;
@@ -402,194 +91,3 @@ padding: 50px;
     transition: all 2s;
     transform: scale(1.5,1.5);
 }    
-
-/*Página Cuidadores Primarios Sección Sostenimiento Afectivo */
-
-.SostenimientoCp {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;
-    
-}
-.SostenimientoCp__Imagen{
-    text-align: right;
-    margin: 20px   
-}
-.SostenimientoCp__Texto{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    text-align:left;
-    height: 90%; 
-}
-
-/*Página Cuidadores Primarios Sección Aprendizaje a través del juego */
-.AprendizajeCpJ {
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;
-}
-.AprendizajeCpJ__Imagen{
-    text-align: right;
-    margin: 20px   
-}
-.AprendizajeCpJ__Texto{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-evenly;
-    text-align:left;
-    height: 90%; 
-}
-
-/*Página Agentes Educativos*/
-#gradiente1{
-    background: rgb(106,27,154);
-    background: radial-gradient(circle, rgba(106,27,154,1) 0%, rgba(74,18,108,1) 33%, rgba(60,14,88,1) 47%, rgba(49,11,73,1) 58%, rgba(41,9,62,1) 66%, rgba(8,0,15,1) 100%);
-}
-
-.IntroAe{
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    align-items:center;
-    padding: 50px;
-}
-
-.SliderAe {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 50px;
-}
-.SliderAe {
-    width: 95%;
-    margin: auto;
-    overflow: hidden;   
-}
-.SliderAe ul {
-    display: flex;
-    width: 300%;
-    animation: cambio2 15s infinite;
-    animation-direction: alternate;
-    
-}
-.SliderAe li {
- width: 60%;
-}
-.SliderAe img {
-    width: 60%;
-}
-@keyframes cambio2 {
-    0% {margin-left: 0;}
-    25% {margin-left: -100;}
-
-    50% {margin-left: -200%;}
-    100% {margin-left: -200%;}
-}
-
-.HerramientasAe {
-        display: flex;
-        justify-content: center;
-        height: 100%;
-        align-items:center;
-        padding: 50px;
-        flex-direction: column;
-    }
-    .HerramientasAe__Imagen{
-        text-align: right;
-        margin: 20px   
-    }
-    .HerramientasAe__Texto{
-        display: flex;
-        flex-direction: column;
-        justify-content:space-evenly;
-        text-align:left;
-        height: 90%; 
-    }
-
-    /*Página Contacto*/
-
-    .EquipoImagen {
-        display: flex;
-        justify-content:center;
-        height: 100%;
-        align-items:center;
-        padding: 50px;
-    }
-
-    .Equipo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 50px;
-    }
-
-    .Forms {
-        display: flex;
-    }
-    .formulario {
-        color: #F8CA00;
-        display: flex;
-        flex-direction: column;
-        padding: 50px;
-
-    }
-    
-    /*Grid Página Contacto sección de Equipo*/
-
-    .Equipo {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        gap: 1em;
-        justify-content: center;
-        justify-self: center;
-    }
-
-    .anidado1 {
-        display: grid;
-        gap: 1em;
-        align-items: center;
-        justify-self: center ;
-        align-self: center;
-    }
-
-    .anidado1Img{
-        display: grid;
-        justify-content: center;
-    }
-    .anidado2 {
-        display: grid;
-        gap: 1em;
-    }
-    .anidado2Img{
-            display: grid;
-            justify-content: center;
-        }
-
-    .anidado3 {
-        display: grid;
-        gap: 1em;
-    }
-    .anidado3Img{
-        display: grid;
-        justify-content: center;
-    }
-    .Equipo div {
-        background-color: #ffff52;
-        padding: 1em;
-        align-items: center;
-        justify-self: center ;
-        align-self: center;
-    }
-
-    .ConoceEquipo {
-        grid-column: 1/4;
-    }
-
-    .Equipo div:hover {
-        border: 1px solid #000
-    }
