--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,24 +11,30 @@
     box-sizing: border-box; 
     font-family: 'Noto Sans SC', sans-serif;     
 }
+
+$ancho: 450px;
+$purple: #6a1b9a;
+$yellow:  #F8CA00;
+
+
 header{
-    color: #F8CA00; background-color: #6a1b9a;
+    color:$yellow; background-color:$purple;
     }
 
     #imagenPrincipal {
         background-image: url(../img/logo\ izquierda.png);
         background-size:cover;
         width: 100%;
-        height: 450px;
+        height: $ancho;
     }
 
     #fondogalaxia {
         background-image: url(../img/fondogalaxia.png);
         background-size: cover;
         width: 100%;
-        height: 350px;
+        $ancho / 2;
     }
-    
+
 .principal {
     color: #F8CA00;
     font-family: Poetsen;
@@ -93,3 +99,4 @@ header{
     transition: all 2s;
     transform: scale(1.5,1.5);
 }    
+
