--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 $ancho: 450px;
 $purple: #6a1b9a;
 $yellow:  #F8CA00;
+$purpleSoft:#9c4dcc 
 
 
 header{
@@ -36,7 +37,7 @@ header{
     }
 
 .principal {
-    color: #F8CA00;
+    color: $yellow;
     font-family: Poetsen;
     text-align:right;
     font-size: 100px;
@@ -57,7 +58,7 @@ header{
    
 }
 .ActividadesCpG div {
-    background-color: #9c4dcc;
+    background-color: $purpleSoft;
     padding: 2vh;
     align-items: center;
     justify-self: center ;
