--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,32 +16,62 @@ header{
     color: #F8CA00; background-color: #6a1b9a;
     }
 
-    #imagenPrincipal {
+    #container-fluid-principal {
         background-image: url(../img/logo\ izquierda.png);
         background-size:cover;
         width: 100%;
-        height: 450px;
-    }
-
-    #fondogalaxia {
-        background-image: url(../img/fondogalaxia.png);
-        background-size: cover;
-        width: 100%;
-        height: 350px;
+        height: 680px;
     }
     
-.principal {
+    .PrincipalText{
     color: #F8CA00;
     font-family: Poetsen;
-    text-align:right;
+    text-align:center;
     font-size: 100px;
     padding: 120px 32px 50px; 
     transition: all 2s;
 }
-.principal:hover{
-    font-size: 105px;
+    .PrincipalText:hover{
+    font-size: 120px;
     transition: ease-in-out;
     }
+
+    .SubPrincipal {
+        color: #F8CA00;
+        text-align: right;
+        width: auto;
+        width: auto;
+    }
+
+.IntroIndex {
+padding: 2rem;
+border: 5px solid black;
+margin: 1.5rem;
+background: #fffc00;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ffffff, #fffc00);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ffffff, #fffc00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.IntroIndex__info {
+    text-align: center;
+    display: block;
+    box-sizing: border-box;
+}
+
+.container__SectionNiñxs {
+    padding: 2rem;
+    text-align: center;
+    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+    background-size:cover;
+    height: 500px;
+}
+.row {
+    padding: auto;
+    margin-top: 3rem;
+}
+
+
 /*Página Cuidadores Primarios*/
 .ActividadesCpG {
     display: grid;
