Avances en el Index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,10 +46,11 @@ header{
 .IntroIndex {
 padding: 2rem;
 border: 5px solid black;
-margin: 1.5rem;
-background: #fffc00;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #ffffff, #fffc00);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #ffffff, #fffc00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+background: #6441A5;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .IntroIndex__info {
