--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,7 +23,7 @@ header {
     }
 
     #imagenPrincipal {
-        background-image: url(../img/logo\ izquierda.png);
+        background-image: url(../img/logoIzquierda.png);
         background-size:cover;
         width: 100%;
         height: $ancho;
