--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,151 +1,142 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;400;700&display=swap');
-
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;400;700&display=swap");
 @font-face {
-    font-family: Poetsen;
-    src: url(../fonts/PoetsenOne-Regular.ttf);
-    font-weight: bold;
-  }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
-    font-family: 'Noto Sans SC', sans-serif;     
-}
-body{
-    background: #9D50BB;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6E48AA, #9D50BB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-} 
-header{
-    color: #F8CA00; background-color: #6a1b9a;
-    }
+  font-family: Poetsen;
+  src: url(../fonts/PoetsenOne-Regular.ttf);
+  font-weight: bold; }
 
-    #container-fluid-principal {
-        background-image: url(../img/logoIzquierda.png);
-        background-size:cover;
-        width: 100%;
-        height: 680px;
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Noto Sans SC', sans-serif; }
 
-    #fondogalaxia {
-        background-image: url(../img/fondogalaxia.png);
-        background-size: cover;
-        width: 100%;
-        height: 350px;
-        font-family: Poetsen;
-    }
-.Other {
-    font-family: Poetsen;
-}
-    
-    .PrincipalText{
-    color: #F8CA00;
-    font-family: Poetsen;
-    text-align:center;
-    font-size: 100px;
-    padding: 120px 32px 50px; 
-    transition: all 2s;
-}
-    .PrincipalText:hover{
-    font-size: 120px;
-    transition: ease-in-out;
-    }
+body {
+  background: #9D50BB;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #6E48AA, #9D50BB);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
-    .SubPrincipal {
-        color: #F8CA00;
-        text-align: right;
-        width: auto;
-        width: auto;
-    }
+header {
+  color: #F8CA00;
+  background-color: #6a1b9a; }
+
+.jumbotron {
+  background-image: url(../img/Jumbotron.svg);
+  background-size: cover;
+  height: auto; }
+
+.display-1 {
+  color: #F8CA00;
+  font-family: Poetsen;
+  text-align: right;
+  transition: all 2s; }
+
+.display-1:hover {
+  font-size: 25px;
+  transition: ease-in-out; }
+
+.lead {
+  text-align: end; }
+
+.display-1__NN {
+  color: #F8CA00;
+  font-family: Poetsen;
+  text-align: right;
+  font-size: 12vw; }
+
+.lead__NN {
+  text-align: end; }
 
 .IntroIndex {
-padding: 2rem;
-border: 5px solid black;
-
-
-
-}
+  padding: 2rem;
+  border: 5px solid black; }
 
 .IntroIndex__info {
-    text-align: center;
-    display: block;
-    box-sizing: border-box;
-}
+  text-align: center;
+  display: block;
+  box-sizing: border-box; }
 
 .container__SectionNiñxs {
-    padding: 2rem;
-    text-align: center;
-    width: 100%;
-    background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
-    background-size:cover;
-    height: 500px;
-}
+  padding: 2rem;
+  text-align: center;
+  width: 100%;
+  background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+  background-size: cover;
+  height: 500px; }
+
 .row {
-    padding: auto;
-    margin-top: 3rem;
-}
+  padding: auto;
+  margin-top: 3rem; }
 
 .AgentesE {
-    background-color:#ffff52;
-    margin: 3rem;
-    padding-bottom: 1rem;
-}
-/*Página Niños y Niñas*/
+  background-color: #ffff52;
+  margin: 3rem;
+  padding-bottom: 1rem; }
 
+/*Página Niños y Niñas*/
+.jumbotronNN {
+  background-image: url(../img/FondoGalaxia.svg);
+  background-size: cover;
+  height: 200px;
+  color: #F8CA00;
+  font-family: Poetsen;
+  text-align: center; }
+
+.display-1NN {
+  color: #F8CA00;
+  font-family: Poetsen;
+  align-items: center; }
 
 .ActividadesCpG {
-    display: grid;
-    gap: 1em;
-   
-}
+  display: grid;
+  gap: 1em; }
+
 .ActividadesCpG div {
-    background-color: #9c4dcc;
-    padding: 2vh;
-    align-items: center;
-    justify-self: center ;
-    align-self: center;
-}
+  background-color: #9c4dcc;
+  padding: 2vh;
+  align-items: center;
+  justify-self: center;
+  align-self: center; }
 
 .ActividadesCpG_Titulo {
-    grid-column: 1/4;
-}
+  grid-column: 1/4; }
 
 .ActividadesCpG div:hover {
-    border: 3px solid #000
-}
+  border: 3px solid #000; }
 
-.CerebroAnidado{
-    display: grid;
-    gap: 1em;
-    margin: 5vh;
-}
+.CerebroAnidado {
+  display: grid;
+  gap: 1em;
+  margin: 5vh; }
 
-.Cerebro_Anidado_Img{
-    display: grid;
-    justify-content: center;
-}
-.Brain:hover{
-    transition: all 2s;
-    transform: scale(1.5,1.5);
-}
+.Cerebro_Anidado_Img {
+  display: grid;
+  justify-content: center; }
 
-.EmocionesAnidado{
-    display: grid;
-    gap: 1em;
-}
-.Emociones_Anidado_Img{
-        display: grid;
-        justify-content: center;
-    }
+.Brain:hover {
+  transition: all 2s;
+  transform: scale(1.5, 1.5); }
+
+.EmocionesAnidado {
+  display: grid;
+  gap: 1em; }
+
+.Emociones_Anidado_Img {
+  display: grid;
+  justify-content: center; }
+
 .Emotions:hover {
-    transition: all 2s;
-    transform: scale(1.5,1.5);
-}    
+  transition: all 2s;
+  transform: scale(1.5, 1.5); }
 
 footer {
-    background: #6441A5;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-color: #F8CA00;
-}
-
+  background: #6441A5;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2a0845, #6441A5);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2a0845, #6441A5);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #F8CA00; }
