--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,43 +11,90 @@
     box-sizing: border-box; 
     font-family: 'Noto Sans SC', sans-serif;     
 }
-
-$ancho: 450px;
-$purple: #6a1b9a;
-$yellow:  #F8CA00;
-$purpleSoft:#9c4dcc; 
-
-
-header {
-    color:$yellow; background-color:$purple;
-    }
-
-    #imagenPrincipal {
-        background-image: url(../img/logoIzquierda.png);
-        background-size:cover;
-        width: 100%;
-        height: $ancho;
-    }
-
-    #fondogalaxia {
-        background-image: url(../img/fondogalaxia.png);
-        background-size: cover;
-        width: 100%;
-    }
-
-.principal {
-    color: $yellow;
+body{
+    background: #9D50BB;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #6E48AA, #9D50BB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+} 
+header{
+    color: #F8CA00; background-color: #6a1b9a;
+    } 
+.jumbotron{
+    background-image:url(../img/Jumbotron.svg);
+    background-size: cover;
+    height: auto;
+}
+.display-1{
+    color: #F8CA00;
     font-family: Poetsen;
     text-align:right;
-    font-size: 100px;
-    padding: 120px 32px 50px; 
     transition: all 2s;
-}
-.principal:hover{
-    font-size: 105px;
+  }
+  .display-1:hover{
+    font-size: 25px;
     transition: ease-in-out;
     }
-/*Página Cuidadores Primarios*/
+.lead{
+    text-align: end;
+}
+  
+.display-1__NN{
+        color: #F8CA00;
+        font-family: Poetsen;
+        text-align:right;
+        font-size: 12vw;
+      }
+
+.lead__NN{
+        text-align: end;
+    }
+
+.IntroIndex {
+padding: 2rem;
+border: 5px solid black;
+}
+
+.IntroIndex__info {
+    text-align: center;
+    display: block;
+    box-sizing: border-box;
+}
+
+.container__SectionNiñxs {
+    padding: 2rem;
+    text-align: center;
+    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+    background-size:cover;
+    height: 500px;
+}
+.row {
+    padding: auto;
+    margin-top: 3rem;
+}
+
+.AgentesE {
+    background-color:#ffff52;
+    margin: 3rem;
+    padding-bottom: 1rem;
+}
+/*Página Niños y Niñas*/
+
+.jumbotronNN{
+    background-image:url(../img/FondoGalaxia.svg);
+    background-size: cover;
+    height: 200px;
+    color: #F8CA00;
+    font-family: Poetsen;
+    text-align:center;
+    
+}
+.display-1NN{
+    color: #F8CA00;
+    font-family: Poetsen;
+    align-items: center;
+    
+  }
 
 
 
@@ -57,7 +104,7 @@ header {
    
 }
 .ActividadesCpG div {
-    background-color: $purpleSoft;
+    background-color: #9c4dcc;
     padding: 2vh;
     align-items: center;
     justify-self: center ;
@@ -99,4 +146,11 @@ header {
     transition: all 2s;
     transform: scale(1.5,1.5);
 }    
+
+footer {
+    background: #6441A5;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+color: #F8CA00;
+}
 
