--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,17 +12,27 @@
     font-family: 'Noto Sans SC', sans-serif;     
 }
 body{
-    background: #9D50BB;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #6E48AA, #9D50BB);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #6E48AA, #9D50BB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #00416A;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E4E5E6, #00416A);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E4E5E6, #00416A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 } 
+nav {
+    background: #0f0c29;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.nav-link {
+    color: blue;
+}
 header{
     color: #F8CA00; background-color: #6a1b9a;
     } 
 .jumbotron{
     background-image:url(../img/Jumbotron.svg);
+    height: 80vp;
     background-size: cover;
-    height: auto;
+   ;
 }
 .display-1{
     color: #F8CA00;
@@ -42,48 +52,42 @@ header{
         color: #F8CA00;
         font-family: Poetsen;
         text-align:right;
-        font-size: 12vw;
+        font-size: 10vw;
       }
 
 .lead__NN{
         text-align: end;
     }
 
-.IntroIndex {
-padding: 2rem;
-border: 5px solid black;
-}
-
-.IntroIndex__info {
-    text-align: center;
-    display: block;
-    box-sizing: border-box;
-}
-
-.container__SectionNiñxs {
+.container-fluid__SectionNiñxs {
     padding: 2rem;
     text-align: center;
     width: 100%;
     background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
     background-size:cover;
-    height: 500px;
+    
+    color: cornsilk;
 }
 .row {
     padding: auto;
     margin-top: 3rem;
 }
-
+h5 {
+    color: darkblue;
+}
 .AgentesE {
-    background-color:#ffff52;
+    background-color:#38006b;
     margin: 3rem;
     padding-bottom: 1rem;
+    border-radius: 1rem;
+    color: cornsilk;
 }
 /*Página Niños y Niñas*/
 
 .jumbotronNN{
     background-image:url(../img/FondoGalaxia.svg);
     background-size: cover;
-    height: 200px;
+    height: 80vp;
     color: #F8CA00;
     font-family: Poetsen;
     text-align:center;
@@ -148,9 +152,30 @@ border: 5px solid black;
 }    
 
 footer {
-    background: #6441A5;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-color: #F8CA00;
+    background: #0f0c29;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: #F8CA00;
 }
+
+.icon-bar {
+    width: 100%;
+    background-color: #555;
+    overflow: auto;
+  }
+  
+  .icon-bar a {
+    float: left;
+    width: 20%;
+    text-align: center;
+    padding: 12px 0;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 36px;
+  }
+  
+  .icon-bar a:hover {
+    background-color: #000;
+  }
+  
 
