--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,7 +65,6 @@ header{
     width: 100%;
     background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
     background-size:cover;
-    
     color: cornsilk;
 }
 .row {
@@ -99,9 +98,20 @@ h5 {
     align-items: center;
     
   }
-
-
-
+.containerSlider{
+    margin:2rem ;
+    padding: 2rem;
+}
+.containerNN_3{
+    background-color: #6a1b9a;
+    margin:2rem ;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+.ScapeRoom__NN{
+    margin:2rem ;
+    padding: 2rem; 
+}
 .ActividadesCpG {
     display: grid;
     gap: 1em;
@@ -150,7 +160,14 @@ h5 {
     transition: all 2s;
     transform: scale(1.5,1.5);
 }    
-
+.container-fluid__CP{
+    padding: 2rem;
+    text-align: center;
+    width: 100%;
+    background-image: url(https://images.pexels.com/photos/415824/pexels-photo-415824.jpeg?cs=srgb&dl=pexels-pixabay-415824.jpg&fm=jpg);
+    background-size:cover;
+    color: cornsilk;
+}
 footer {
     background: #0f0c29;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
@@ -178,4 +195,27 @@ footer {
     background-color: #000;
   }
   
+/*Página de Contacto*/
+.container__Contacto {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .container__Contacto img {vertical-align: middle;}
+  
+  .container__Contacto .content {
+    position:sticky;
+    bottom: 0;
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+  }
 
+  .Forms {
+      background-color:#f7cb2d;
+      padding: 5rem;
+      margin: 5rem;
+      border-radius: 2rem;
+  }
