--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,14 +112,16 @@ h5 {
     margin:2rem ;
     padding: 2rem; 
 }
+/*Página Cuidadores Primarios*/
 .ActividadesCpG {
     display: grid;
     gap: 1em;
+    padding: .5rem;
+    margin: .5rem;
    
 }
 .ActividadesCpG div {
-    background-color: #9c4dcc;
-    padding: 2vh;
+    padding: 1rem;
     align-items: center;
     justify-self: center ;
     align-self: center;
@@ -127,16 +129,13 @@ h5 {
 
 .ActividadesCpG_Titulo {
     grid-column: 1/4;
-}
-
-.ActividadesCpG div:hover {
-    border: 3px solid #000
+    color:#0f0c29;
 }
 
 .CerebroAnidado{
     display: grid;
     gap: 1em;
-    margin: 5vh;
+    margin: 2rem;
 }
 
 .Cerebro_Anidado_Img{
@@ -163,7 +162,10 @@ h5 {
 .container-fluid__CP{
     padding: 2rem;
     text-align: center;
-    width: 100%;
+    height: 150vh;
+    width: 80%;
+    padding: 15rem;
+    margin: 8rem;
     background-image: url(https://images.pexels.com/photos/415824/pexels-photo-415824.jpeg?cs=srgb&dl=pexels-pixabay-415824.jpg&fm=jpg);
     background-size:cover;
     color: cornsilk;
