--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,8 +23,10 @@ background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Ch
 background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .nav-link {
-    color: blue;
+    color:white;
 }
+
+/*Página html*/
 header{
     color: #F8CA00; background-color: #6a1b9a;
     } 
@@ -60,6 +62,7 @@ header{
     }
 
 .container-fluid__SectionNiñxs {
+    margin: 2rem;
     padding: 2rem;
     text-align: center;
     width: 100%;
