--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,6 +43,10 @@ header {
   height: 100%;
   width: 100%; }
 
+.container__Principal {
+  margin: 2rem;
+  padding: 2rem; }
+
 .display-1 {
   color: #F8CA00;
   font-family: Poetsen;
@@ -67,25 +71,22 @@ header {
 .lead__NN {
   text-align: end; }
 
-.container-fluid__SectionNiñxs {
+.container__SectionNiñxs {
   margin: 2rem;
-  padding: 2rem;
+  padding: 4rem;
   text-align: center;
   background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
   background-size: cover;
   color: cornsilk; }
-
-.row {
-  padding: auto;
-  margin-top: 3rem; }
 
 h5 {
   color: darkblue; }
 
 .AgentesE {
   background-color: #38006b;
-  margin: 3rem;
-  padding-bottom: 1rem;
+  margin: 2rem;
+  padding: 2rem;
+  padding-bottom: 3rem;
   border-radius: 1rem;
   color: cornsilk; }
 
@@ -119,22 +120,6 @@ h5 {
   padding: 2rem; }
 
 /*Página Cuidadores Primarios*/
-.ActividadesCpG {
-  display: grid;
-  gap: 1em;
-  padding: .5rem;
-  margin: .5rem; }
-
-.ActividadesCpG div {
-  padding: 1rem;
-  align-items: center;
-  justify-self: center;
-  align-self: center; }
-
-.ActividadesCpG_Titulo {
-  grid-column: 1/4;
-  color: #0f0c29; }
-
 .CerebroAnidado {
   display: grid;
   gap: 1em;
@@ -150,7 +135,8 @@ h5 {
 
 .EmocionesAnidado {
   display: grid;
-  gap: 1em; }
+  gap: 1em;
+  margin: 2rem; }
 
 .Emociones_Anidado_Img {
   display: grid;
