--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,11 @@ header{
     height: 100%;
     width: 100%;
 }
+
+.container__Principal{
+    margin: 2rem;
+    padding: 2rem;
+}
 .display-1{
     color: #F8CA00;
     font-family: Poetsen;
@@ -64,28 +69,30 @@ header{
         text-align: end;
     }
 
-.container-fluid__SectionNiñxs {
+.container__SectionNiñxs {
     margin: 2rem;
-    padding: 2rem;
+    padding: 4rem;
     text-align: center;
     background-image: url(https://images.unsplash.com/photo-1571210862729-78a52d3779a2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
     background-size:cover;
     color: cornsilk;
 }
-.row {
-    padding: auto;
-    margin-top: 3rem;
-}
+
 h5 {
     color: darkblue;
 }
 .AgentesE {
     background-color:#38006b;
-    margin: 3rem;
-    padding-bottom: 1rem;
+    margin: 2rem;
+    padding: 2rem;
+    padding-bottom: 3rem;
     border-radius: 1rem;
     color: cornsilk;
 }
+
+
+ 
+ 
 /*Página Niños y Niñas*/
 
 .jumbotronNN{
@@ -100,8 +107,7 @@ h5 {
 .display-1NN{
     color: #F8CA00;
     font-family: Poetsen;
-    align-items: center;
-    
+    align-items: center;  
   }
 .containerSlider{
     margin:2rem ;
@@ -113,30 +119,12 @@ h5 {
     padding: 2rem;
     border-radius: 2rem;
 }
+
 .ScapeRoom__NN{
     margin:2rem ;
     padding: 2rem; 
 }
 /*Página Cuidadores Primarios*/
-.ActividadesCpG {
-    display: grid;
-    gap: 1em;
-    padding: .5rem;
-    margin: .5rem;
-   
-}
-.ActividadesCpG div {
-    padding: 1rem;
-    align-items: center;
-    justify-self: center ;
-    align-self: center;
-}
-
-.ActividadesCpG_Titulo {
-    grid-column: 1/4;
-    color:#0f0c29;
-}
-
 .CerebroAnidado{
     display: grid;
     gap: 1em;
@@ -155,6 +143,7 @@ h5 {
 .EmocionesAnidado{
     display: grid;
     gap: 1em;
+    margin:2rem;
 }
 .Emociones_Anidado_Img{
         display: grid;
