--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,19 +28,15 @@ width: 100%;}
 
 /*Página html*/
 header{
-    color: #F8CA00; background-color: #6a1b9a;
+    color: #F8CA00;
     } 
+/*Elemento de bienvenida del Círculo mágico*/    
 .jumbotron__Inicio{
     background-image:url(../img/Jumbotron.svg);
     background-size: cover;
     padding: 15rem;
     height: 100%;
     width: 100%;
-}
-
-.container__Principal{
-    margin: 2rem;
-    padding: 2rem;
 }
 .display-1{
     color: #F8CA00;
@@ -56,8 +52,14 @@ header{
     text-align: end;
     color: #F8CA00;
     font-size: 5vh;
+    padding-left: 20rem;
 }
-  
+
+/*Contenedor video, misión y visión*/
+.container__Principal{
+    margin: 2rem;
+    padding: 2rem;
+} 
 .display-1__NN{
         color: #F8CA00;
         font-family: Poetsen;
@@ -123,6 +125,8 @@ h5 {
 .ScapeRoom__NN{
     margin:2rem ;
     padding: 2rem; 
+    width: 100%;
+    height: 100%;
 }
 /*Página Cuidadores Primarios*/
 .CerebroAnidado{
@@ -164,6 +168,11 @@ h5 {
     margin: 2rem;
     padding: 8rem;
     width: 100%;
+}
+
+.IntroCp{
+    margin-top: 2rem;
+    padding: 2rem;
 }
 footer {
     background: #0f0c29;  /* fallback for old browsers */
